--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
 
-    <script type="text/javascript" src="./js/ga.js"></script>
+    <!--<script type="text/javascript" src="./js/ga.js"></script>-->
     
     <link href="https://zapier.com/engine/rss/43663/p2" rel="alternate" type="application/rss+xml" title="PETRUSINO: il feed per rimanere aggiornati sulle nuove risorese inserite" />
 
